staging/app1-dep/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1
  namespace: staging
  annotations:
     argocd-image-updater.argoproj.io/image-list: nginx=357415106205.dkr.ecr.us-east-1.amazonaws.com/test
     argocd-image-updater.argoproj.io/nginx.update-strategy: latest
spec:
  selector:
    matchLabels:
      app: nginx-app1
  replicas: 4
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - name: nginx-app1
        image: nginx
        repository: 357415106205.dkr.ecr.us-east-1.amazonaws.com/test
        ports:
        - containerPort: 80
