staging/app1-dep/networkpolicy-deny-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: staging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
